# oop_labs

./: CMakeLists.txt
game/: CMakeLists.txt  Game.cpp  Game.h
game/bots/: Bot.h
game/bots/logic/: BotLogic.h  Predator.h
game/rules/: Collector.h  ObjectsCounter.h  Rule.h
game/rules/end/: Collector.h  Exterminator.h  ObjectsCounter.h  Rule.h
game/rules/init/: Creautres.h  Generator.h  Items.h
game/serialization/: CellSnapshot.h  EntitySnapshot.h  FieldSnapshot.h  GameSnapshot.h  SerializeException.h  Snapshot.h  Snapshots_declaration.h
game_lib/: CMakeLists.txt
game_lib/controllers/: BaseController.h  Bot.h  BotLogic.h  EnemyController.h  ItemController.h  PlayerController.h
game_lib/controllers/logic/: BotLogic.h  Predator.h
game_lib/core/: Cloneable.h  InstanceOf.h  Stringable.h  Vec2D.cpp  Vec2D.h
game_lib/entities/: Creature.h  CreatureFactory.h  Entities_Declarations.h  Entity.h  EntityAbstractFactory.h  EntityFactory.h  Player.h  entities_declarations.h
game_lib/entities/creatures/: Creature.h  CreatureFactory.h  Player.h
game_lib/entities/creatures/enemies/: Enemy.h  EnemyFactory.h  HeavyFactory.h  LightFactory.h  MediumFactory.h
game_lib/entities/enemies/: Enemy.h  HeavyFactory.h  LightFactory.h  MediumFactory.h
game_lib/entities/items/: ArmorFactory.h  HealerFactory.h  Item.h  ItemFactory.h  WeaponFactory.h
game_lib/field/: Field.cpp  Field.h  FieldBuilder.cpp  FieldBuilder.h
game_lib/field/cells/: AbstractCell.h  Cell.h  Entrance.h  Exit.h  Wall.h
game_lib/loggers/: ConsoleLogger.h  FileLogger.h  Level.cpp  Level.h  Log.h  LogTimer.h  Loggable.h  Logger.h
game_lib/logging/: Level.h  Log.h  LogLevel.cpp  LogLevel.h  LogTimer.cpp  Loggable.h
game_lib/logging/formats/: EmptyFormat.h  Format.h  TagFormat.h  TimeFormat.h
game_lib/logging/loggers/: ConsoleLogger.h  FileLogger.h  Logger.h
game_lib/viewers/: CellView.cpp  CellView.h  ConsoleFieldView.cpp  FieldView.h  Viewers_Declarations.h  viewers_declarations.h
game_lib/viewers/console/: CellView.cpp  CellView.h  ConsoleFieldView.cpp  ConsoleFieldView.h  ConsoleObjectView.h  ConsoleObjectViewer.h  EntityView.cpp  EntityView.h
gui/: CMakeLists.txt  StartGameDialog.cpp  StartGameDialog.h  Window.cpp  Window.h  main.cpp
gui/assets/: Assets.cpp  Assets.h
gui/assets/views/: CellView.cpp  CellView.h  EntityView.cpp  EntityView.h  ObjectView.h
lab1/: 0303_ALG_Bolkunov_VO_LR1.odt  CMakeLists.txt  main.cpp
lab1/field/: Cell.h  Field.cpp  Field.h
lab1/game_lib/: CMakeLists.txt
lab1/game_lib/core/: Vec2D.h
lab1/game_lib/entities/: Entity.h
lab1/game_lib/field/: FieldBuilder.cpp  FieldBuilder.h
lab1/game_lib/field/cells/: AbstractCell.h  Cell.h  Entrance.h  Exit.h  Wall.h
lab1/game_lib/viewers/: CellView.h  ConsoleFieldView.h  FieldView.h
lab1/report/: 0303_OOP_Bolkunov_VO_LR1.odt
lab1/src/: CMakeLists.txt
lab1/src/entities/: Entity.h
lab1/src/field/: Cell.cpp  Cell.h  Field.cpp  Field.h
lab1/src/field/cells/: Cell.cpp  Cell.h  Entrance.h  Exit.h  Wall.h
lab1/src/viewers/: ConsoleFieldView.cpp  ConsoleFieldView.h  FieldView.h
lab1/tests/: CMakeLists.txt  copy_test.cpp  init_test.cpp  move_test.cpp
lab1/tests/1/: CMakeLists.txt  copy_test.cpp  init_test.cpp  move_test.cpp
report/: 0303_OOP_Bolkunov_VO_LR1.odt  0303_OOP_Bolkunov_VO_LR2.odt  0303_OOP_Bolkunov_VO_LR3.odt  0303_OOP_Bolkunov_VO_LR4.odt  0303_OOP_Bolkunov_VO_LR5.odt  0303_OOP_Bolkunov_VO_LR6.odt  доп требования.odt
tests/: CMakeLists.txt
tests/1/: copy_test.cpp  init_test.cpp  move_test.cpp
tests/2/: CMakeLists.txt  entities_test.cpp  interaction_test.cpp
tests/3/: CMakeLists.txt  controllers_test.cpp  loggable_test.cpp  loggers_test.cpp
tests/4/: CMakeLists.txt  bot_test.cpp  game_test.cpp  gen_test.cpp  rule_test.cpp
tests/6/: CMakeLists.txt  field_test.cpp
